[package]
name = "helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = "4.5.21"
colored = "2.1.0"
minreq = { version = "2.11.0", features = ["https"] }
rustc-hash = "1.1.0"
sysinfo = { version = "0.32.0", features = ["system"], default-features = false }

[lints.clippy]
all = "warn"
